# AoC2019

./: CMakeLists.txt  README.md  day1.h  dec01_1.cpp  dec01_2.cpp  dec02_1.cpp  dec02_2.cpp  main.cpp
